--- a/interest.html
+++ b/interest.html
@@ -69,7 +69,7 @@
                 <ol>
                     <p><li>&#x2B1C; Stay confident, even in the face of downturns.</li></p>
                     <p><li>&#x2B1C; Appreciate everything, learn from it, and enhance my awareness.</li></p>
-                    <p><li>&#x2B1C; Maintain a love of ancient Chinese literature and occasionally express your emotions in poetry.</li></p>
+                    <p><li>&#x2B1C; Maintain a love of ancient Chinese literature and occasionally express my emotions in poetry.</li></p>
                     <p><li>&#x2B1C; Improve my appreciation of music, even though I am not good at singing.</li></p>
                     <p><li>&#x2B1C; The same is true for arts.</li></p>
                     <p><li>&#x2B1C; Raising outstanding children.</li></p>
