--- a/papers.html
+++ b/papers.html
@@ -67,9 +67,9 @@
         <div class="content">
             <h2>&#x1F4F0; Papers</h2>
                 <ol>
-                    <p><li id="ref1">&#x2705; Zhang, X., Zhang, Y., Si, Y., Gao, N., Zhang, H., & Yang, H. (2024). A high altitude respiration and SpO2 dataset for assessing the human response to hypoxia. Scientific Data, 11(1), 248. <a href="https://doi.org/10.1038/s41597-024-03065-x">(https://doi.org/10.1038/s41597-024-03065-)</a></li></p>
-                    <p><li id="ref2">&#x2705; Shi, G., Zhang, P., Zhang, X., Li, J., Zheng, X., Yan, J., ... & Yang, H. (2023). The spatiotemporal heterogeneity of the biophysical microenvironment during hematopoietic stem cell development: from embryo to adult. Stem Cell Research & Therapy, 14(1), 251. <a href="https://doi.org/10.1186/s13287-023-03464-8">(https://doi.org/10.1186/s13287-023-03464-8)</a></li></p>
-                    <p><li id="ref3">&#x2705; Li, J., Wang, S., Li, Y., Zhang, N., Gribskov, M., Zhang, X., ... & Yang, H. (2020). miRNA‐mediated macrophage behaviors responding to matrix stiffness and ox‐LDL. Journal of Cellular Physiology, 235(9), 6139-6153. <a href="https://doi.org/10.1002/jcp.29543">(https://doi.org/10.1002/jcp.29543)</a></li></p>
+                    <p><li id="ref1">&#x2705; Zhang, X., Zhang, Y., Si, Y., Gao, N., Zhang, H., & Yang, H. (2024). A high altitude respiration and SpO2 dataset for assessing the human response to hypoxia. Scientific Data, 11(1), 248. <a href="https://doi.org/10.1038/s41597-024-03065-x">https://doi.org/10.1038/s41597-024-03065-x</a></li></p>
+                    <p><li id="ref2">&#x2705; Shi, G., Zhang, P., Zhang, X., Li, J., Zheng, X., Yan, J., ... & Yang, H. (2023). The spatiotemporal heterogeneity of the biophysical microenvironment during hematopoietic stem cell development: from embryo to adult. Stem Cell Research & Therapy, 14(1), 251. <a href="https://doi.org/10.1186/s13287-023-03464-8">https://doi.org/10.1186/s13287-023-03464-8</a></li></p>
+                    <p><li id="ref3">&#x2705; Li, J., Wang, S., Li, Y., Zhang, N., Gribskov, M., Zhang, X., ... & Yang, H. (2020). miRNA‐mediated macrophage behaviors responding to matrix stiffness and ox‐LDL. Journal of Cellular Physiology, 235(9), 6139-6153. <a href="https://doi.org/10.1002/jcp.29543">https://doi.org/10.1002/jcp.29543</a></li></p>
                 </ol>
         </div>
     </section>
