--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
         <div class="content">
             <h2>&#x1F4F0; Papers</h2>
                 <ol>
-                    <p><li id="ref1">&#x2705; Zhang, X., Zhang, Y., Si, Y., Gao, N., Zhang, H., & Yang, H. (2024). A high altitude respiration and SpO2 dataset for assessing the human response to hypoxia. Scientific Data, 11(1), 248. <a href="https://doi.org/10.1038/s41597-024-03065-x">https://doi.org/10.1038/s41597-024-03065-x</a></li></p>
-                    <p><li id="ref1">&#x2705; Zhang, H., Zhang, X., Si, Y., Li, H., Han, J., Yang, C., & Yang, H. (2024). Universal strategy for rapid design and analysis of gas detection peptide chips with positional preference. Sensing and Bio-Sensing Research, 46(2024), 100697. <a href="https://doi.org/10.1016/j.sbsr.2024.100697">https://doi.org/10.1016/j.sbsr.2024.100697</a></li></p>
-                    <p><li id="ref1">&#x2705; Si, Y., Zhang, Y., Zhang, X., Liu, S., Zhang, H., & Yang, H. (2024). A finer-grained high altitude EEG dataset for hypoxia levels assessment. Scientific Data, 11(1), xxx. <a href="https://doi.org/10.1038/sxxx-x">https://doi.org/10.1038/sxxx-x</a></li></p>
-                    <p><li id="ref2">&#x2705; Shi, G., Zhang, P., Zhang, X., Li, J., Zheng, X., Yan, J., ... & Yang, H. (2023). The spatiotemporal heterogeneity of the biophysical microenvironment during hematopoietic stem cell development: from embryo to adult. Stem Cell Research & Therapy, 14(1), 251. <a href="https://doi.org/10.1186/s13287-023-03464-8">https://doi.org/10.1186/s13287-023-03464-8</a></li></p>
-                    <p><li id="ref3">&#x2705; Li, J., Wang, S., Li, Y., Zhang, N., Gribskov, M., Zhang, X., ... & Yang, H. (2020). miRNA‐mediated macrophage behaviors responding to matrix stiffness and ox‐LDL. Journal of Cellular Physiology, 235(9), 6139-6153. <a href="https://doi.org/10.1002/jcp.29543">https://doi.org/10.1002/jcp.29543</a></li></p>
+                    <p><li id="ref1">&#x2705; <b>Zhang, X.</b>, Zhang, Y., Si, Y., Gao, N., Zhang, H., & Yang, H. (2024). A high altitude respiration and SpO2 dataset for assessing the human response to hypoxia. Scientific Data, 11(1), 248. <a href="https://doi.org/10.1038/s41597-024-03065-x">https://doi.org/10.1038/s41597-024-03065-x</a></li></p>
+                    <p><li id="ref1">&#x2705; Zhang, H., <b>Zhang, X.</b>, Si, Y., Li, H., Han, J., Yang, C., & Yang, H. (2024). Universal strategy for rapid design and analysis of gas detection peptide chips with positional preference. Sensing and Bio-Sensing Research, 46(2024), 100697. <a href="https://doi.org/10.1016/j.sbsr.2024.100697">https://doi.org/10.1016/j.sbsr.2024.100697</a></li></p>
+                    <p><li id="ref1">&#x2705; Si, Y., Zhang, Y., <b>Zhang, X.</b>, Liu, S., Zhang, H., & Yang, H. (2024). A finer-grained high altitude EEG dataset for hypoxia levels assessment. Scientific Data, 11(1), xxx. <a href="https://doi.org/10.1038/sxxx-x">https://doi.org/10.1038/sxxx-x</a></li></p>
+                    <p><li id="ref2">&#x2705; Shi, G., Zhang, P., <b>Zhang, X.</b>, Li, J., Zheng, X., Yan, J., ... & Yang, H. (2023). The spatiotemporal heterogeneity of the biophysical microenvironment during hematopoietic stem cell development: from embryo to adult. Stem Cell Research & Therapy, 14(1), 251. <a href="https://doi.org/10.1186/s13287-023-03464-8">https://doi.org/10.1186/s13287-023-03464-8</a></li></p>
+                    <p><li id="ref3">&#x2705; Li, J., Wang, S., Li, Y., Zhang, N., Gribskov, M., <b>Zhang, X.</b>, ... & Yang, H. (2020). miRNA‐mediated macrophage behaviors responding to matrix stiffness and ox‐LDL. Journal of Cellular Physiology, 235(9), 6139-6153. <a href="https://doi.org/10.1002/jcp.29543">https://doi.org/10.1002/jcp.29543</a></li></p>
                 </ol>
             <h2>&#x1F4D3; Projects</h2>
                 <ol>
@@ -104,9 +104,9 @@
                 </ol>
             <h2>&#x1F4C5; Plan</h2>
                 <ol>
-                    <p><li id="ref1">&#x2B1C; Zhang, X., Zhang, Y., Gao, N., Si, Y., Yang, H. (2024). Mirror space[J]. Military Medical Research.</li></p>
-                    <p><li id="ref2">&#x2B1C; Zhang, X., Zhang, Y., Gao, N., Si, Y., Yang, H. (2024). Manifold spectra[J]. Nature Machine Intelligence.</li></p>
-                    <p><li id="ref3">&#x2B1C; Zhang, X., Zhang, Y., Gao, N., Si, Y., Yang, H. (2025). Hyperdimensional spectrum[J]. Nature Medicine.</li></p>
+                    <p><li id="ref1">&#x2B1C; <b>Zhang, X.</b>, Zhang, Y., Gao, N., Si, Y., Yang, H. (2024). Mirror space[J]. Military Medical Research.</li></p>
+                    <p><li id="ref2">&#x2B1C; <b>Zhang, X.</b>, Zhang, Y., Gao, N., Si, Y., Yang, H. (2024). Manifold spectra[J]. Nature Machine Intelligence.</li></p>
+                    <p><li id="ref3">&#x2B1C; <b>Zhang, X.</b>, Zhang, Y., Gao, N., Si, Y., Yang, H. (2025). Hyperdimensional spectrum[J]. Nature Medicine.</li></p>
                 </ol>
             <h2>&#127912; Interest</h2>
                 <ol>
