--- a/plan.html
+++ b/plan.html
@@ -67,9 +67,9 @@
         <div class="content">
             <h2>&#x1F4C5; Plan</h2>
                 <ol>
-                    <p><li id="ref1">&#x2B1C; Zhang, X., Zhang, Y., Gao, N., Si, Y., Yang, H. (2024). Mirror space[J]. Military Medical Research.</li></p>
-                    <p><li id="ref2">&#x2B1C; Zhang, X., Zhang, Y., Gao, N., Si, Y., Yang, H. (2024). Manifold spectra[J]. Nature Machine Intelligence.</li></p>
-                    <p><li id="ref3">&#x2B1C; Zhang, X., Zhang, Y., Gao, N., Si, Y., Yang, H. (2025). Hyperdimensional spectrum[J]. Nature Medicine.</li></p>
+                    <p><li id="ref1">&#x2B1C; <b>Zhang, X.</b>, Zhang, Y., Gao, N., Si, Y., Yang, H. (2024). Mirror space[J]. Military Medical Research.</li></p>
+                    <p><li id="ref2">&#x2B1C; <b>Zhang, X.</b>, Zhang, Y., Gao, N., Si, Y., Yang, H. (2024). Manifold spectra[J]. Nature Machine Intelligence.</li></p>
+                    <p><li id="ref3">&#x2B1C; <b>Zhang, X.</b>, Zhang, Y., Gao, N., Si, Y., Yang, H. (2025). Hyperdimensional spectrum[J]. Nature Medicine.</li></p>
                 </ol>
         </div>
     </section>
