--- a/index.html
+++ b/index.html
@@ -80,9 +80,8 @@
         <div class="profile">
             <div class="left-container">
                 <p><strong>Name:</strong> Xi Zhang</p>
-                <p><strong>Affiliation:</strong> Northwestern Polytechnical University</p>
+                <p><strong>Affiliation:</strong> Liangzhu Laboratory</p>
                 <p><strong>Business Email:</strong> oca-john@hotmail.com</p>
-                <p><strong>Academic Email:</strong> xizhang@mail.nwpu.edu.cn</p>
             </div>
             <div class="right-container"><img src="imgs/xizh-s.jpg" style="height: 150px; width: auto;" alt="pic"></div>
         </div>
@@ -132,3 +131,4 @@
     </footer>
 </body>
 </html>
+
