--- a/projects.html
+++ b/projects.html
@@ -138,18 +138,18 @@
     <footer class="footer">
         <div class="footer-col">
             <a href="https://orcid.org/0009-0000-2861-0626"><img src="imgs/orcid.svg" style="height: 18px; width: auto;"/> ORCID</a>
+            <a href="https://www.researchgate.net/profile/Xi_Zhang33"><img src="imgs/researchgate.png" style="height: 18px; width: auto;"/> Research Gate</a>
+        </div>
+        <div class="footer-col">
+            <a href="https://scholar.google.com/citations?user=OCXZaZgAAAAJ&hl=en"><img src="imgs/scholar.png" style="height: 18px; width: auto;"/> Scholar</a>
             <a href="https://pubmed.ncbi.nlm.nih.gov/?term=%28%28zhang+xi%5BAuthor%5D%29+AND+%28yang+hui%5BAuthor%5D%29+AND+%28Northwestern+Polytechnical+University%5BAffiliation%5D%29%29&sort="><img src="imgs/pubmed.png" style="height: 18px; width: auto;"/> Pubmed</a>
         </div>
         <div class="footer-col">
-            <a href="https://scholar.google.com/citations?user=OCXZaZgAAAAJ&hl=en"><img src="imgs/scholar.png" style="height: 18px; width: auto;"/> GoogleScholar</a>
-            <a href="https://www.researchgate.net/profile/Xi_Zhang33"><img src="imgs/researchgate.png" style="height: 18px; width: auto;"/> ResearchGate</a>
+            <a href="https://github.com/oca-john"><img src="imgs/github.png" style="height: 18px; width: auto;"/> GitHub</a>
+            <a href="https://www.linkedin.com/in/xizhang2024/"><img src="imgs/linkedin.png" style="height: 18px; width: auto;"/> LinkedIn</a>
         </div>
         <div class="footer-col">
             <a href="mailto:oca-john@hotmail.com">&#x1F4E8; Email</a>
-            <a href="https://github.com/oca-john"><img src="imgs/github.png" style="height: 18px; width: auto;"/> GitHub</a>
-        </div>
-        <div class="footer-col">
-            <a href="https://www.linkedin.com/in/xizhang2024/"><img src="imgs/linkedin.png" style="height: 18px; width: auto;"/> LinkedIn</a>
             <a href="https://twitter.com/Xi_Zhang_2024"><img src="imgs/twitterx.png" style="height: 18px; width: auto;"/> X / <img src="imgs/twitter.png" style="height: 18px; width: auto;"/> Twitter</a>
         </div>
     </footer>
