--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <p><strong data-i18n="email">Business Email:</strong> oca-john@hotmail.com</p>
             </div>
         </div>
-        <p data-i18n="bio">Despite the widespread adoption of deep learning facilitated by general models, I remain firmly convinced that highly specialized models are irreplaceable in the realm of expertise. Drawing inspiration from biological knowledge and employing computational techniques, I strive for an effective integration of these disciplines in my research endeavors. Currently, my research focus resides in feature representation and feature fusion of time-series data, with the ultimate objective of developing robust analysis and prediction models for such signals.</p>
+        <p data-i18n="bio">Despite the widespread adoption of deep learning facilitated by general models, I remain firmly convinced that highly specialized models are irreplaceable in the realm of expertise. Drawing inspiration from biological knowledge and employing computational techniques, I strive for an effective integration of these disciplines in my research endeavors. Currently, my research focus resides in feature representation and feature fusion of time-series data, with the ultimate objective of developing robust analysis and prediction models for such signals. I am currently engaged in optical brain-computer interface research, primarily focusing on optical-based brain signal reading, decoding, optical signal writing, and encoding.</p>
         <div class="content">
             <h2 data-i18n="papersTitle">&#x1F4F0; Papers</h2>
                 <ol>
@@ -200,9 +200,10 @@
                     <p><li>&#x2B1C; <span data-i18n="project3">A model of neural networks closer to the biological brain.</span></li></p>
                 </ol>
             <h2 data-i18n="aboutTitle">&#128214; About me</h2>
-            <p data-i18n="aboutDesc">I am a graduate student in the School of Life Science at the Northwestern Polytechnical University(NPU). I am currently working on my Ph.D degree in the same department. My research interests are in the area of machine learning. I am also interested in the applications of deep learning in healthcare and social sciences.</p>
+            <p data-i18n="aboutDesc">I am a postdoctoral researcher at the Liangzhu Laboratory, Zhejiang University, conducting interdisciplinary research on optical brain-computer interfaces and deep learning.</p>
             <ol>
-                <p><li>&#x2B1C; <a href="https://www.nwpu.edu.cn/"><span data-i18n="edu1">Northwestern Polytechnical University (2018~Present)</span></a></li></p>
+                <p><li>&#x2B1C; <a href="https://www.liangzhulab.zju.edu.cn/"><span data-i18n="edu0">Liangzhu Laboratory, Zhejiang University (2025~Present)</span></a></li></p>
+                <p><li>&#x2705; <a href="https://www.nwpu.edu.cn/"><span data-i18n="edu1">Northwestern Polytechnical University (2018~2025)</span></a></li></p>
                 <p><li>&#x2705; <a href="https://www.snnu.edu.cn/"><span data-i18n="edu2">Shaanxi Normal University (2014~2018)</span></a></li></p>
                 <p><li>&#x2705; <a href="https://www.yau.edu.cn"><span data-i18n="edu3">Yan'an University (2010~2014)</span></a></li></p>
             </ol>
