--- a/index.html
+++ b/index.html
@@ -193,6 +193,13 @@
                         <div class="paper-doi"><a href="https://doi.org/10.1002/jcp.29543">https://doi.org/10.1002/jcp.29543</a></div>
                     </li>
                 </ol>
+            <h2 data-i18n="reviewTitle">&#x1F4DD; Review Experience</h2>
+                <ol>
+                    <li class="paper-item">
+                        <span class="paper-title"><i>Biomedical Signal Processing and Control</i></span>
+                        <div class="paper-authors"><span data-i18n="reviewDate">Date:</span> 2025 &emsp;|&emsp; <span data-i18n="reviewRole">Role:</span> <span data-i18n="reviewer">Reviewer</span> &emsp;|&emsp; <span data-i18n="reviewTaskId">Task ID:</span> 0f1b8845-c81c-48b4-b414-54961ea759f7</div>
+                    </li>
+                </ol>
             <h2 data-i18n="projectsTitle">&#x1F4D3; Projects</h2>
                 <ol>
                     <p><li>&#x2705; <span data-i18n="project1">A series of characteristic representation methods for high-dimensional physiological signals.</span></li></p>
@@ -202,10 +209,10 @@
             <h2 data-i18n="aboutTitle">&#128214; About me</h2>
             <p data-i18n="aboutDesc">I am a postdoctoral researcher at the Liangzhu Laboratory, Zhejiang University, conducting interdisciplinary research on optical brain-computer interfaces and deep learning.</p>
             <ol>
-                <p><li>&#x2B1C; <a href="https://www.liangzhulab.zju.edu.cn/"><span data-i18n="edu0">Liangzhu Laboratory, Zhejiang University (2025~Present)</span></a></li></p>
-                <p><li>&#x2705; <a href="https://www.nwpu.edu.cn/"><span data-i18n="edu1">Northwestern Polytechnical University (2018~2025)</span></a></li></p>
-                <p><li>&#x2705; <a href="https://www.snnu.edu.cn/"><span data-i18n="edu2">Shaanxi Normal University (2014~2018)</span></a></li></p>
-                <p><li>&#x2705; <a href="https://www.yau.edu.cn"><span data-i18n="edu3">Yan'an University (2010~2014)</span></a></li></p>
+                <p><li>&#x2B1C; <a href="https://www.liangzhulab.zju.edu.cn/"><span data-i18n="edu0">Liangzhu Laboratory, Zhejiang University (2025~Present)</span></a> &emsp;|&emsp; <span data-i18n="edu0Discipline">Brain and Brain Science</span> &emsp;|&emsp; <span data-i18n="edu0Research">Optical Brain-Computer Interface</span></li></p>
+                <p><li>&#x2705; <a href="https://www.nwpu.edu.cn/"><span data-i18n="edu1">Northwestern Polytechnical University (2018~2025)</span></a> &emsp;|&emsp; <span data-i18n="edu1Discipline">Biomedical Engineering</span> &emsp;|&emsp; <span data-i18n="edu1Research">High-Altitude Hypoxia Physiology and Deep Learning Modeling</span></li></p>
+                <p><li>&#x2705; <a href="https://www.snnu.edu.cn/"><span data-i18n="edu2">Shaanxi Normal University (2014~2018)</span></a> &emsp;|&emsp; <span data-i18n="edu2Discipline">Biochemistry and Molecular Biology</span> &emsp;|&emsp; <span data-i18n="edu2Research">Mouse Somatic Cell Immortalization</span></li></p>
+                <p><li>&#x2705; <a href="https://www.yau.edu.cn"><span data-i18n="edu3">Yan'an University (2010~2014)</span></a> &emsp;|&emsp; <span data-i18n="edu3Discipline">Biological Science</span> &emsp;|&emsp; <span data-i18n="edu3Research">Screening and Identification of Heavy Oil Degrading Microorganisms</span></li></p>
             </ol>
         </div>
     </section>
