--- a/papers.html
+++ b/papers.html
@@ -173,6 +173,13 @@
                         <div class="paper-doi"><a href="https://doi.org/10.1002/jcp.29543">https://doi.org/10.1002/jcp.29543</a></div>
                     </li>
                 </ol>
+            <h2 data-i18n="reviewTitle">&#x1F4DD; Review Experience</h2>
+                <ol>
+                    <li class="paper-item">
+                        <span class="paper-title"><i>Biomedical Signal Processing and Control</i></span>
+                        <div class="paper-authors"><span data-i18n="reviewDate">Date:</span> 2025 &emsp;|&emsp; <span data-i18n="reviewRole">Role:</span> <span data-i18n="reviewer">Reviewer</span> &emsp;|&emsp; <span data-i18n="reviewTaskId">Task ID:</span> 0f1b8845-c81c-48b4-b414-54961ea759f7</div>
+                    </li>
+                </ol>
         </div>
     </section>
     <footer class="footer">
