--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
             <a href="index.html" data-i18n="home">&#x1F3E0; Home</a>
             <a href="papers.html" data-i18n="papers">&#x1F4F0; Papers</a>
             <a href="projects.html" data-i18n="projects">&#x1F4D3; Projects</a>
+            <a href="about.html" data-i18n="about">&#x2139;&#xFE0F; About</a>
         </nav>
         <div class="right-group">
             <span class="name">Xi Zhang</span>
@@ -216,15 +217,7 @@
                     <p><li>&#x2B1C; <span data-i18n="project2">A series of application articles related to feature methods.</span></li></p>
                     <p><li>&#x2B1C; <span data-i18n="project3">A model of neural networks closer to the biological brain.</span></li></p>
                 </ol>
-            <h2 data-i18n="aboutTitle">&#128214; About me</h2>
-            <p data-i18n="aboutDesc">I am a postdoctoral researcher at the Liangzhu Laboratory, Zhejiang University, conducting interdisciplinary research on optical brain-computer interfaces and deep learning.</p>
-            <ol>
-                <p><li>&#x2B1C; <a href="https://www.liangzhulab.zju.edu.cn/"><span data-i18n="edu0">Liangzhu Laboratory, Zhejiang University (2025~Present)</span></a> &emsp;|&emsp; <span data-i18n="edu0Discipline">Brain and Brain Science</span> &emsp;|&emsp; <span data-i18n="edu0Research">Optical Brain-Computer Interface</span></li></p>
-                <p><li>&#x2705; <a href="https://www.nwpu.edu.cn/"><span data-i18n="edu1">Northwestern Polytechnical University (2018~2025)</span></a> &emsp;|&emsp; <span data-i18n="edu1Discipline">Biomedical Engineering</span> &emsp;|&emsp; <span data-i18n="edu1Research">High-Altitude Hypoxia Physiology and Deep Learning Modeling</span></li></p>
-                <p><li>&#x2705; <a href="https://www.snnu.edu.cn/"><span data-i18n="edu2">Shaanxi Normal University (2014~2018)</span></a> &emsp;|&emsp; <span data-i18n="edu2Discipline">Biochemistry and Molecular Biology</span> &emsp;|&emsp; <span data-i18n="edu2Research">Mouse Somatic Cell Immortalization</span></li></p>
-                <p><li>&#x2705; <a href="https://www.yau.edu.cn"><span data-i18n="edu3">Yan'an University (2010~2014)</span></a> &emsp;|&emsp; <span data-i18n="edu3Discipline">Biological Science</span> &emsp;|&emsp; <span data-i18n="edu3Research">Screening and Identification of Heavy Oil Degrading Microorganisms</span></li></p>
-            </ol>
-        </div>
+            </div>
     </section>
     <footer class="footer">
         <div class="footer-col">
