--- a/projects.html
+++ b/projects.html
@@ -128,7 +128,7 @@
             <a href="index.html" data-i18n="home">&#x1F3E0; Home</a>
             <a href="papers.html" data-i18n="papers">&#x1F4F0; Papers</a>
             <a href="projects.html" data-i18n="projects">&#x1F4D3; Projects</a>
-            <a href="about.html" data-i18n="about">&#x1F4D6; About</a>
+            <a href="about.html" data-i18n="about">&#x2139;&#xFE0F; About</a>
         </nav>
         <div class="right-group">
             <span class="name">Xi Zhang</span>
