--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-theme="dark">
 <head>
     <meta charset="UTF-8">
     <title>Xi Zhang's Academic Page</title>
@@ -169,7 +169,7 @@
         </nav>
         <div class="right-group">
             <span class="name">Xi Zhang</span>
-            <button id="theme-toggle" class="theme-toggle" onclick="toggleTheme()" title="Toggle Theme">🌙</button>
+            <button id="theme-toggle" class="theme-toggle" onclick="toggleTheme()" title="Switch to Light Mode">☀️</button>
             <div class="lang-switcher">
                 <button class="lang-btn" data-lang="en" onclick="setLang('en')">EN</button>
                 <button class="lang-btn" data-lang="zh-CN" onclick="setLang('zh-CN')">简</button>
