--- a/index.html
+++ b/index.html
@@ -108,12 +108,14 @@
             display: flex;
             max-width: 100%;
             padding: 20px;
+            padding-left: 5%;
         }
         .left-container {
-            flex: 0 0 15%;
+            flex: 0 0 auto;
         }
         .right-container {
             flex: 1;
+            margin-left: 50px;
         }
         footer {
             text-align: center;
@@ -278,7 +280,7 @@
             <a href="https://twitter.com/Xi_Zhang_2024"><img src="imgs/twitterx.png" style="height: 18px; width: auto;"/> X / <img src="imgs/twitter.png" style="height: 18px; width: auto;"/> Twitter</a>
         </div>
         <div class="footer-copyright">
-            <span data-i18n="copyright">Designed and built by Xi Zhang. Feel free to cite or fork.</span> | © <span id="currentYear"></span>
+            <span data-i18n="copyright">Designed and built by Xi Zhang. Feel free to cite or fork.</span> &emsp; © <span id="currentYear"></span>
         </div>
     </footer>
     <script src="langs.js"></script>
