--- a/papers.html
+++ b/papers.html
@@ -252,7 +252,7 @@
             <a href="https://twitter.com/Xi_Zhang_2024"><img src="imgs/twitterx.png" style="height: 18px; width: auto;"/> X / <img src="imgs/twitter.png" style="height: 18px; width: auto;"/> Twitter</a>
         </div>
         <div class="footer-copyright">
-            <span data-i18n="copyright">Designed and built by Xi Zhang. Feel free to cite or fork.</span> | © <span id="currentYear"></span>
+            <span data-i18n="copyright">Designed and built by Xi Zhang. Feel free to cite or fork.</span> &emsp; © <span id="currentYear"></span>
         </div>
     </footer>
     <script src="langs.js"></script>
